# LevelUP_C_Part_1

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  cm_adder
.github/workflows/: cmake_dev.yml  cmake_dev_doxy.yml
Doc/HW1/: Tsdk2.MD
Docs/: QuickManual.MD  Readme.md
HW1/: CMakeLists.txt
HW1/src/: CMakeLists.txt  main.cpp  task1.cpp  task1.hpp  task2.cpp  task2.hpp
HW1/tests/: CMakeLists.txt
HW2/: CMakeLists.txt
HW2/Doc/: Task2.MD
HW2/src/: CMakeLists.txt  Task1.cpp  Task1.hpp  Task2.cpp  Task2.hpp  main.cpp
HW2/tests/: CMakeLists.txt  test_task1.cpp  test_task2.cpp
HomeWork_1_1/: CMakeLists.txt
HomeWork_1_1/src/: CMakeLists.txt  Task1.cpp  main.cpp  task1.cpp
HomeWork_1_1/tests/: CMakeLists.txt
HomeWork_1_2/src/: main.cpp  task2.cpp
HomeWork_1_2/tests/: CMakeLists.txt
HomeWork_2_1/: CMakeLists.txt
HomeWork_2_1/src/: CMakeLists.txt  Task1.cpp  main.cpp
HomeWork_2_1/tests/: CMakeLists.txt  test_task1.cpp
HomeWork_2_2/: CMakeLists.txt
HomeWork_2_2/docs/: Task2.MD
HomeWork_2_2/src/: CMakeLists.txt  Task2.cpp  main.cpp
HomeWork_2_2/tests/: CMakeLists.txt
HomeWork_3_1/docs/: Task_3_1.md
HomeWork_3_1/src/: Task1.cpp  Task1.hpp  main.cpp
HomeWork_3_1/tests/: test_task1.cpp
HomeWork_3_2/: CMakeLists.txt
HomeWork_3_2/docs/: Task_3_2.md
HomeWork_3_2/src/: Task2.cpp  Task2.hpp  main.cpp
HomeWork_3_2/tests/: CMakeLists.txt
HomeWork_3_3/docs/: Task_3_3.md
HomeWork_3_3/src/: CMakeLists.txt  Task3.cpp  Task3.hpp  main.cpp
HomeWork_3_3/tests/: CMakeLists.txt  test_task3.cpp
HomeWork_3_4/docs/: Task_3_4.md
HomeWork_3_4/src/: CMakeLists.txt  Task4.cpp  Task4.hpp  main.cpp
HomeWork_3_4/tests/: CMakeLists.txt  test_task4.cpp
HomeWork_3_5/: CMakeLists.txt
HomeWork_3_5/docs/: Task_3_5.md
HomeWork_3_5/src/: CMakeLists.txt  Task5.cpp  Task5.hpp  main.cpp
HomeWork_3_5/tests/: test_task5.cpp
HomeWork_4_1/: CMakeLists.txt
HomeWork_4_1/docs/: Readme.md
HomeWork_4_1/src/: Task1.cpp  Task1.hpp  main.cpp
HomeWork_4_2/docs/: Readme.md
HomeWork_4_2/src/: CMakeLists.txt  Task1.cpp  main.cpp
HomeWork_4_3/docs/: Readme.md
HomeWork_4_3/src/: CMakeLists.txt  Task1.cpp  Task1.hpp  main.cpp
HomeWork_4_3/tests/: test_task1.cpp
HomeWork_4_4/: CMakeLists.txt
HomeWork_4_4/docs/: Readme.md
HomeWork_4_4/src/: CMakeLists.txt  Task1.cpp  Task1.hpp  main.cpp
HomeWork_4_5/src/: Task1.hpp  main.cpp
HomeWork_4_5/tests/: test_task1.cpp
HomeWork_4_6/docs/: Readme.md
HomeWork_4_6/src/: CMakeLists.txt  C_Stack.cpp  C_Stack.hpp  Task1.cpp  Task1.hpp  main.cpp
HomeWork_4_6/tests/: test_task1.cpp
HomeWork_4_Leetcode/: CMakeLists.txt
HomeWork_4_Leetcode/docs/: Readme.md
HomeWork_4_Leetcode/src/: Task_1.cpp  Task_1.hpp  Task_2.cpp  Task_2.hpp  Task_3.cpp  Task_3.hpp  main.cpp  main.hpp
HomeWork_Week_1/: CMakeLists.txt
HomeWork_Week_1/HomeWork_1_1/tests/: CMakeLists.txt  test_task1.cpp
HomeWork_Week_1/HomeWork_1_2/: CMakeLists.txt
HomeWork_Week_2/: CMakeLists.txt
HomeWork_Week_2/HomeWork_2_1/tests/: CMakeLists.txt
HomeWork_Week_2/HomeWork_2_2/tests/: CMakeLists.txt
HomeWork_Week_3/: CMakeLists.txt
HomeWork_Week_3/HW_1/: CMakeLists.txt
HomeWork_Week_3/HW_1/tests/: CMakeLists.txt  getlength_test.cpp
HomeWork_Week_3/HW_2/: CMakeLists.txt
HomeWork_Week_3/HW_2/docs/: Readme.md
HomeWork_Week_3/HW_2/include/shared/: lcd.hpp
HomeWork_Week_3/HW_2/src/: lcd.cpp  main.cpp
HomeWork_Week_3/HW_2/tests/: CMakeLists.txt  lcd_test.cpp
HomeWork_Week_3/HW_3/: CMakeLists.txt
HomeWork_Week_3/HW_3/docs/: Readme.md
HomeWork_Week_3/HW_3/src/: dswap.cpp  main.cpp
HomeWork_Week_3/HW_3/tests/: CMakeLists.txt  dswap_test.cpp
HomeWork_Week_3/HW_4/: CMakeLists.txt
HomeWork_Week_3/HW_4/tests/: CMakeLists.txt  dec2bin_test.cpp
HomeWork_Week_3/HW_5/: CMakeLists.txt
HomeWork_Week_3/HW_5/tests/: CMakeLists.txt  dfseq_test.cpp
HomeWork_Week_3/HomeWork_3_1/: CMakeLists.txt
HomeWork_Week_3/HomeWork_3_1/tests/: CMakeLists.txt
HomeWork_Week_3/HomeWork_3_3/: CMakeLists.txt
HomeWork_Week_3/HomeWork_3_4/: CMakeLists.txt
HomeWork_Week_3/HomeWork_3_5/tests/: CMakeLists.txt  test_task5.cpp
HomeWork_Week_4/: CMakeLists.txt
HomeWork_Week_4/HW_1/: CMakeLists.txt
HomeWork_Week_4/HW_1/tests/: CMakeLists.txt  swapMln_test.cpp  xxx_test.cpp
HomeWork_Week_4/HW_2/: CMakeLists.txt
HomeWork_Week_4/HW_2/include/shared/: arr_diff.hpp
HomeWork_Week_4/HW_2/src/: arr_diff.cpp  main.cpp
HomeWork_Week_4/HW_2/tests/: CMakeLists.txt  arrDiff_test.cpp
HomeWork_Week_4/HW_3/: CMakeLists.txt
HomeWork_Week_4/HW_3/include/shared/: kswap.hpp
HomeWork_Week_4/HW_3/src/: kswap.cpp  main.cpp
HomeWork_Week_4/HW_3/tests/: CMakeLists.txt  kswap_test.cpp
HomeWork_Week_4/HW_4/: CMakeLists.txt
HomeWork_Week_4/HW_4/include/shared/: matrix_sod.hpp
HomeWork_Week_4/HW_4/src/: main.cpp  matrix_sod.cpp
HomeWork_Week_4/HW_4/tests/: CMakeLists.txt  matrixSod_test.cpp
HomeWork_Week_4/HW_5/: CMakeLists.txt
HomeWork_Week_4/HW_5/tests/: CMakeLists.txt  geString_test.cpp
HomeWork_Week_4/HW_6/: CMakeLists.txt
HomeWork_Week_4/HW_6/include/shared/: C_Stack.hpp
HomeWork_Week_4/HW_6/src/: C_Stack.cpp  main.cpp  valid_brackets.cpp
HomeWork_Week_4/HW_6/tests/: CMakeLists.txt  isValid_test.cpp  stack_test.cpp
HomeWork_Week_4/HW_Leetcode/: CMakeLists.txt
HomeWork_Week_4/HW_Leetcode/include/shared/: single_number_1.hpp  single_number_2.hpp  single_number_3.hpp
HomeWork_Week_4/HW_Leetcode/src/: main.cpp  single_number_1.cpp  single_number_2.cpp  single_number_3.cpp
HomeWork_Week_4/HW_Leetcode/tests/: CMakeLists.txt  sn1_test.cpp  sn2_test.cpp  sn3_test.cpp
HomeWork_Week_4/HomeWork_4_2/: CMakeLists.txt
HomeWork_Week_4/HomeWork_4_3/: CMakeLists.txt
HomeWork_Week_4/HomeWork_4_5/: CMakeLists.txt
Playground/: CMakeLists.txt
Playground/src/: CMakeLists.txt  Playground.cpp  Playground.hpp  main.cpp  r_fib.cpp  r_fib.hpp  rfact.cpp  rfact.hpp  sequence_sum.cpp  sequence_sum.hpp
Playground/tests/: CMakeLists.txt  test_demo.cpp  test_r_fib.cpp  test_rfact.cpp
src/: main.c
src/HW1/: task1.c  (+3 more)
templates/: folders.lst
(+62 files in other folders)
